# simulating-large-scale-microservices

./: .gitignore  README.md
alibaba_traces/: Call_Graph_Raahil.ipynb  MS_Metrics.ipynb  fetchData_MacOS.sh
extra/: node_analysis_v2.ipynb
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CallGraphVisualizer.tsx  file-upload.tsx  node-editor.tsx  service-node.tsx
generic-service/: Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.service  sa.sh  sb.sh
generic-service/.cargo/: sa.toml  sb.toml
generic-service/config/: config.json
generic-service/proto/: service.proto
generic-service/src/: main.rs
input-parser/: Cargo.toml  test.json  test2.json  test_config.json
input-parser/proto/: sim.proto
input-parser/src/: main.rs
input-parser/src/client/: cli.rs  grpc.rs  http.rs  mod.rs
orchestrator/: .gitignore  Cargo.toml  build.rs  docker-compose.yml  submitted_config.yaml  test_config.yaml
orchestrator/service_configs/: config.json  service_alpha_config.json  service_beta_config.json  service_delta_config.json  service_epsilon_config.json  service_gamma_config.json
orchestrator/src/: main.rs
runner/: Cargo.toml  build.rs
runner/src/: main.rs
runner/src/client/: cli.rs  grpc.rs  http.rs  mod.rs
runner/src/generator/: yaml.rs
runner/src/orchestrator/: mod.rs
runner/src/parser/: json.rs  mod.rs
runner/src/server/: grpc.rs  http.rs
runner/src/validator/: mod.rs  rules.rs
trace_analysis/raahil/: Call_Graph_Raahil.ipynb  MS_Metrics.ipynb
(+6 files in other folders)
