[package]
name = "generic-service"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
prost = "0.13.5"
prost-types = "0.13.5"
rand = "0.9.0"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tonic = "0.13.0"

[build-dependencies]
tonic-build = "0.13.0"
