[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = "1.16.0"
anyhow = "1.0"
futures = "0.3.31"
prost = "0.13.5"
prost-types = "0.13.5"
serde = { version = "1.0", features = ["derive"]}
serde_derive = {version = "1.0"}
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tonic = "0.13.0"
rand = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
portpicker = "0.1.1"
yaml-rust = "0.4"
serde_yaml = "0.9"



[build-dependencies]
tonic-build = "0.13.0"